cleanup & user login form

--- a/styles/app.css
+++ b/styles/app.css
@@ -3,17 +3,17 @@
 
 @layer base {
 	* {
-	  @apply tw-outline-offset-0 placeholder:tw-select-none focus:tw-outline-0;
-  
-	  -webkit-user-drag: none;
-	  -khtml-user-drag: none;
-	  -moz-user-drag: none;
-	  -o-user-drag: none;
-	  user-drag: none;
+		@apply tw-outline-offset-0 placeholder:tw-select-none focus:tw-outline-0;
+
+		-webkit-user-drag: none;
+		-khtml-user-drag: none;
+		-moz-user-drag: none;
+		-o-user-drag: none;
+		user-drag: none;
 	}
-  
+
 	body {
-	  @apply tw-bg-[#f1f8ff] tw-text-base tw-text-black tw-transition-colors tw-duration-200;
+		@apply tw-bg-[#f1f8ff] tw-text-base tw-text-black tw-transition-colors tw-duration-200;
 	}
 
 	svg {
@@ -24,70 +24,68 @@
 @tailwind utilities;
 
 .ui-arrow {
-	@apply tw-relative before:tw-w-0 before:tw-h-0 before:tw-absolute 
+	@apply tw-relative before:tw-absolute before:tw-h-0 before:tw-w-0;
 }
 
 .ui-arrow-down {
 	@apply before:tw-top-full before:tw-left-1/2 before:tw--translate-x-1/2 
 	before:tw-border-x-[6px] 
-	before:!tw-border-x-transparent
-	before:tw-border-t-[4px] 
-	
+	before:tw-border-t-[4px]
+	before:!tw-border-x-transparent;
 }
 .ui-arrow-top {
 	@apply before:tw-bottom-full before:tw-left-1/2 before:tw--translate-x-1/2 
 	before:tw-border-x-[6px] 
-	before:!tw-border-x-transparent
 	before:tw-border-b-[4px]
-	
+	before:!tw-border-x-transparent;
 }
 
 #sidebar .ui-accordion svg {
-	@apply tw-w-[14px] tw-h-[14px] tw-ml-[4px]
+	@apply tw-ml-[4px] tw-h-[14px] tw-w-[14px];
 }
 #sidebar .ui-accordion > button {
-	@apply tw-w-full tw-p-[15px] tw-text-left
+	@apply tw-w-full tw-p-[15px] tw-text-left;
 }
 
 .ui-breadcrumbs {
-	@apply tw-inline-flex tw-gap-x-[10px]
+	@apply tw-inline-flex tw-gap-x-[10px];
 }
 .ui-breadcrumbs > svg {
-	@apply tw-mt-[2px]
+	@apply tw-mt-[2px];
 }
 
 .ui-button {
-	@apply tw-flex tw-justify-center tw-border-2 tw-rounded-[8px] tw-border-[#00b7ff] tw-text-[#00b7ff] tw-font-semibold tw-max-w-[125px] tw-p-[5px] hover:tw-bg-[#d0e4f8] disabled:tw-bg-[white] disabled:tw-cursor-default;
+	@apply tw-flex tw-max-w-[125px] tw-justify-center tw-rounded-[8px] tw-border-2 tw-border-[#00b7ff] tw-p-[5px] tw-font-semibold tw-text-[#00b7ff] hover:tw-bg-[#d0e4f8] disabled:tw-cursor-default disabled:tw-bg-[white];
 }
 
 .ui-chart {
-	@apply tw-w-[300px]
+	@apply tw-w-[300px];
 }
 
 .ui-checkbox {
-	@apply before:tw-content-["\00A0"] before:tw-inline-block before:tw-box-border before:tw-w-[20px] before:tw-h-[20px] before:tw-bg-[white]
-	before:tw-border before:tw-border-[#B0B0B0] before:tw-rounded-[2px] before:tw-mr-[6px] before:tw-align-baseline before:tw-text-center 
-	before:tw-text-[16px] before:tw-font-bold before:tw-text-[#808080] tw-cursor-pointer
+	@apply tw-cursor-pointer before:tw-mr-[6px] before:tw-box-border before:tw-inline-block before:tw-h-[20px] before:tw-w-[20px]
+	before:tw-rounded-[2px] before:tw-border before:tw-border-[#B0B0B0] before:tw-bg-[white] before:tw-text-center before:tw-align-baseline 
+	before:tw-text-[16px] before:tw-font-bold before:tw-text-[#808080] before:tw-content-["\00A0"];
 }
 
-input[type=checkbox]:checked + .ui-checkbox {
-	@apply before:tw-content-["\2714"]  
+input[type='checkbox']:checked + .ui-checkbox {
+	@apply before:tw-content-["\2714"];
 }
 
 .ui-example {
-	@apply tw-text-[purple] tw-font-normal tw-pl-[30px]
+	@apply tw-pl-[30px] tw-font-normal tw-text-[purple];
 }
 
 .ui-icon-primary {
-	@apply tw-w-[20px] tw-h-[20px]
+	@apply tw-h-[20px] tw-w-[20px];
 }
 
 .ui-input {
-	@apply tw-w-[200px] tw-h-[30px] tw-max-w-full;
+	@apply tw-h-[30px] tw-w-[200px] tw-max-w-full;
 }
 input.ui-input,
 .ui-input:not(input) input {
-	@apply tw-border tw-border-[gray] focus:tw-border-[#222] tw-rounded-[4px] tw-bg-white tw-px-[4px] tw-py-[4px]
+	@apply tw-rounded-[4px] tw-border tw-border-[gray] tw-bg-white tw-px-[4px] tw-py-[4px] focus:tw-border-[#222];
 }
 input.ui-input-error,
 .ui-input-error:not(input) input {
@@ -97,149 +95,147 @@ input.ui-input-error,
 	@apply tw-relative;
 }
 .ui-input:not(input) input {
-	@apply tw-w-full tw-h-full
+	@apply tw-h-full tw-w-full;
 }
 .ui-input:not(input) svg {
-	@apply tw-absolute tw-w-[16px] tw-h-[16px] tw-left-[4px] tw-top-1/2 tw--translate-y-1/2 tw-pointer-events-none tw-text-[gray]
+	@apply tw-pointer-events-none tw-absolute tw-left-[4px] tw-top-1/2 tw-h-[16px] tw-w-[16px] tw--translate-y-1/2 tw-text-[gray];
 }
 .ui-input:not(input) svg + input {
-	@apply tw-pl-[24px]
+	@apply tw-pl-[24px];
 }
 
 .ui-message {
-	@apply tw-border tw-bg-opacity-10 tw-p-[15px] tw-rounded-[10px]  tw-flex tw-items-start tw-gap-x-[10px]
+	@apply tw-flex tw-items-start tw-gap-x-[10px] tw-rounded-[10px]  tw-border tw-bg-opacity-10 tw-p-[15px];
 }
 .ui-message .ui-message-body {
-	@apply tw-flex tw-flex-col tw-gap-y-[5px]
+	@apply tw-flex tw-flex-col tw-gap-y-[5px];
 }
 .ui-message h3 {
-	@apply tw-text-[20px]
+	@apply tw-text-[20px];
 }
 .ui-message-error {
-	@apply tw-border-[red]  tw-bg-[#efd0d0] tw-text-[#8c0303cc]
+	@apply tw-border-[red]  tw-bg-[#efd0d0] tw-text-[#8c0303cc];
 }
 .ui-message-error svg {
-	@apply  tw-text-[red] tw-my-[3px]
+	@apply tw-my-[3px] tw-text-[red];
 }
 .ui-message-info {
-	@apply tw-border  tw-border-[#59b4fa]  tw-bg-[#d5effa]
+	@apply tw-border  tw-border-[#59b4fa]  tw-bg-[#d5effa];
 }
 .ui-message-info svg {
-	@apply  tw-text-[#0066ff] tw-my-[3px]
+	@apply tw-my-[3px] tw-text-[#0066ff];
 }
 .ui-message-success {
-	@apply tw-border-[green]  tw-bg-[#d0efd9] tw-text-[#076a05cc]
+	@apply tw-border-[green]  tw-bg-[#d0efd9] tw-text-[#076a05cc];
 }
 .ui-message-success svg {
-	@apply  tw-text-[green] tw-my-[3px]
+	@apply tw-my-[3px] tw-text-[green];
 }
 .ui-message-warning {
-	@apply tw-border-[orange]  tw-bg-[#efe1d0] tw-text-[#8c6103cc]
+	@apply tw-border-[orange]  tw-bg-[#efe1d0] tw-text-[#8c6103cc];
 }
 .ui-message-warning svg {
-	@apply  tw-text-[orange] tw-my-[3px]
+	@apply tw-my-[3px] tw-text-[orange];
 }
 
 .ui-modal {
 	@apply tw-pointer-events-auto tw-z-50 tw-max-w-full tw-overflow-hidden;
-  }
+}
 .ui-modal-primary {
-	@apply tw-bg-white tw-rounded-[20px] tw-p-[20px]
-  }
+	@apply tw-rounded-[20px] tw-bg-white tw-p-[20px];
+}
 .ui-modal-secondary {
-	@apply tw-bg-[white] tw-rounded-[8px] tw-p-[20px] tw-border-[gray] tw-border
-  }
+	@apply tw-rounded-[8px] tw-border tw-border-[gray] tw-bg-[white] tw-p-[20px];
+}
 
 .ui-overlay {
 	@apply tw-fixed tw-inset-0 tw-z-40 tw-overflow-y-auto;
-  }
+}
 .ui-overlay-primary {
 	@apply tw-bg-black tw-bg-opacity-40;
 }
 
 .ui-progress {
-	@apply tw-w-full tw-overflow-hidden tw-max-w-[900px]
+	@apply tw-w-full tw-max-w-[900px] tw-overflow-hidden;
 }
 .ui-progress-primary {
-	@apply tw-rounded-[8px] tw-bg-[lightgray] tw-text-[white] 
+	@apply tw-rounded-[8px] tw-bg-[lightgray] tw-text-[white];
 }
 .ui-progress-line {
-	@apply tw-duration-700 tw-flex  tw-justify-end tw-p-[5px]
+	@apply tw-flex tw-justify-end  tw-p-[5px] tw-duration-700;
 }
 
 .ui-radio {
-	@apply before:tw-content-["\00A0"] before:tw-inline-block before:tw-box-border before:tw-w-[20px] before:tw-h-[20px] before:tw-bg-[white]
-	before:tw-border before:tw-border-[#B0B0B0] before:tw-rounded-[16px] before:tw-mr-[6px] before:tw-align-baseline before:tw-text-center 
-	before:tw-text-[16px]  tw-cursor-pointer
+	@apply tw-cursor-pointer before:tw-mr-[6px] before:tw-box-border before:tw-inline-block before:tw-h-[20px] before:tw-w-[20px]
+	before:tw-rounded-[16px] before:tw-border before:tw-border-[#B0B0B0] before:tw-bg-[white] before:tw-text-center before:tw-align-baseline 
+	before:tw-text-[16px]  before:tw-content-["\00A0"];
 }
 
-input[type=radio]:checked + .ui-radio {
-	@apply before:tw-bg-[#59b4fa] before:tw-text-[#808080] 
+input[type='radio']:checked + .ui-radio {
+	@apply before:tw-bg-[#59b4fa] before:tw-text-[#808080];
 }
 
 .ui-menu {
-	@apply tw-inline-block tw-relative
+	@apply tw-relative tw-inline-block;
 }
 .ui-menu-primary .ui-menu-button {
 	@apply ui-button;
 }
 .ui-menu-primary .ui-menu-items {
-	@apply tw-absolute tw-min-w-[200px] tw-w-full tw-max-w-full tw-left-0 tw-top-full tw-mt-[10px] tw-flex tw-flex-col tw-bg-white tw-rounded-[8px] tw-border-[gray] tw-border tw-overflow-hidden
+	@apply tw-absolute tw-left-0 tw-top-full tw-mt-[10px] tw-flex tw-w-full tw-min-w-[200px] tw-max-w-full tw-flex-col tw-overflow-hidden tw-rounded-[8px] tw-border tw-border-[gray] tw-bg-white;
 }
 .ui-menu-primary .ui-menu-items a {
-	@apply tw-p-[10px] hover:tw-bg-blue-500 hover:tw-text-[white]
+	@apply tw-p-[10px] hover:tw-bg-blue-500 hover:tw-text-[white];
 }
 .ui-menu-primary .ui-menu-items a.ui-menu-item-active {
-	@apply tw-bg-blue-900 tw-text-[white] hover:tw-bg-blue-900 hover:tw-text-[white] tw-cursor-default
+	@apply tw-cursor-default tw-bg-blue-900 tw-text-[white] hover:tw-bg-blue-900 hover:tw-text-[white];
 }
 
 .ui-pagination {
-	@apply tw-flex tw-items-center tw-gap-x-[5px]
+	@apply tw-flex tw-items-center tw-gap-x-[5px];
 }
 .ui-pagination button {
-	@apply tw-p-[5px] tw-rounded-[2px] tw-border-[lightgray] tw-border
+	@apply tw-rounded-[2px] tw-border tw-border-[lightgray] tw-p-[5px];
 }
 .ui-pagination button.ui-pagination-item-active {
-	@apply tw-bg-[blue] tw-border-none tw-text-white tw-cursor-default;
+	@apply tw-cursor-default tw-border-none tw-bg-[blue] tw-text-white;
 }
 
 .ui-sidebar {
-	@apply tw-flex tw-flex-col tw-fixed tw-top-0 tw-bottom-0 tw-w-[300px] tw-bg-white tw-z-50 tw-transition-transform tw-duration-300
-	tw-pl-[10px] tw-divide-y tw-divide-[lightgray]
+	@apply tw-fixed tw-top-0 tw-bottom-0 tw-z-50 tw-flex tw-w-[300px] tw-flex-col tw-divide-y tw-divide-[lightgray] tw-bg-white
+	tw-pl-[10px] tw-transition-transform tw-duration-300;
 }
 .ui-sidebar-left {
-	@apply tw-right-[100%] tw-border-r tw-border-[lightgray] 
+	@apply tw-right-[100%] tw-border-r tw-border-[lightgray];
 }
 .ui-sidebar-right {
-	@apply tw-left-[100%] tw-border-l tw-border-[lightgray] 
+	@apply tw-left-[100%] tw-border-l tw-border-[lightgray];
 }
 .ui-sidebar.ui-sidebar-left.ui-sidebar-active {
-	@apply tw-translate-x-[100%]
+	@apply tw-translate-x-[100%];
 }
 .ui-sidebar.ui-sidebar-right.ui-sidebar-active {
-	@apply tw--translate-x-[100%]
+	@apply tw--translate-x-[100%];
 }
 
-
 .ui-skeleton {
-	@apply  tw-inline-block tw-max-w-full tw-border tw-bg-[gray] tw-text-[transparent] tw-rounded-[8px] tw-animate-pulse
+	@apply tw-inline-block tw-max-w-full tw-animate-pulse tw-rounded-[8px] tw-border tw-bg-[gray] tw-text-[transparent];
 }
 
 .ui-slider {
-	@apply tw-overflow-hidden tw-relative tw-select-none
+	@apply tw-relative tw-select-none tw-overflow-hidden;
 }
 .ui-slider-container {
-	@apply tw-flex  
+	@apply tw-flex;
 }
 .ui-slider-container > * {
-	@apply tw-flex-[0_0_100%] tw-min-w-0 
+	@apply tw-min-w-0 tw-flex-[0_0_100%];
 }
 .ui-slider-dots {
-	@apply tw-z-[1] tw-bottom-[19px] tw-absolute tw-left-0 tw-right-0 tw-flex tw-justify-center tw-items-center
+	@apply tw-absolute tw-bottom-[19px] tw-left-0 tw-right-0 tw-z-[1] tw-flex tw-items-center tw-justify-center;
 }
 .ui-slider-dot {
-	@apply tw-w-[50px] tw-h-[50px] tw-flex tw-items-center tw-mx-[15px] after:tw-bg-[gray] after:tw-rounded after:tw-w-[100%] after:tw-h-[5px]
-	
+	@apply tw-mx-[15px] tw-flex tw-h-[50px] tw-w-[50px] tw-items-center after:tw-h-[5px] after:tw-w-[100%] after:tw-rounded after:tw-bg-[gray];
 }
 
 /* 
@@ -260,7 +256,7 @@ input[type=radio]:checked + .ui-radio {
 */
 
 .ui-span {
-	@apply tw-select-none tw-text-[green]
+	@apply tw-select-none tw-text-[green];
 }
 
 .ui-spinner {
@@ -270,31 +266,29 @@ input[type=radio]:checked + .ui-radio {
 	@apply after:tw-border-t-[#00b7ff];
 }
 
-
-
-.ui-table tr{
-	@apply tw-border tw-border-[lightgray]
+.ui-table tr {
+	@apply tw-border tw-border-[lightgray];
 }
 
-.ui-tabs button{
-	@apply tw-w-full tw-rounded-lg  tw-p-[3px] tw-text-sm tw-font-medium  tw-ring-white tw-ring-opacity-60 tw-ring-offset-2 tw-ring-offset-blue-400 focus:tw-outline-none focus:tw-ring-2
+.ui-tabs button {
+	@apply tw-w-full tw-rounded-lg  tw-p-[3px] tw-text-sm tw-font-medium  tw-ring-white tw-ring-opacity-60 tw-ring-offset-2 tw-ring-offset-blue-400 focus:tw-outline-none focus:tw-ring-2;
 }
 
 .ui-tooltip {
-	@apply tw-bg-[gray]  tw-text-white tw-py-[5px] tw-px-[10px] tw-rounded-[8px] tw-max-w-[300px]
+	@apply tw-max-w-[300px]  tw-rounded-[8px] tw-bg-[gray] tw-py-[5px] tw-px-[10px] tw-text-white;
 }
 
 .ui-typography {
-	@apply tw-flex tw-flex-col tw-gap-y-[20px] tw-p-[10px] tw-max-w-[800px]
+	@apply tw-flex tw-max-w-[800px] tw-flex-col tw-gap-y-[20px] tw-p-[10px];
 }
 .ui-typography h1 {
-	@apply tw-font-semibold tw-text-[28px];
+	@apply tw-text-[28px] tw-font-semibold;
 }
 .ui-typography h2 {
-	@apply tw-font-semibold tw-text-[24px];
+	@apply tw-text-[24px] tw-font-semibold;
 }
 .ui-typography h3 {
-	@apply tw-font-semibold tw-text-[20px];
+	@apply tw-text-[20px] tw-font-semibold;
 }
 .ui-typography a {
 	@apply tw-text-[#00b7ff];
@@ -302,5 +296,3 @@ input[type=radio]:checked + .ui-radio {
 .ui-typography p {
 	@apply tw-font-medium;
 }
-
-
